-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.1, 5.11.1, 5.12.0 Alpha
-
-
ab03ee7b7e12ae64556513e4791b0d4d55ea26c4 29208fa07c1b9f656ea2535696828385b7832226
Since Qt 5.10.1 and later WinRT event filters do not receive events anymore:
class EventHandler : public QObject { Q_OBJECT public: bool eventFilter(QObject *obj, QEvent *event) override { qDebug() << "Received event " << event->type(); return false; } } int main(int argc, char *argv[]) { QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling); QGuiApplication app(argc, argv); QCoreApplication::instance()->installEventFilter(new EventHandler()); return app.exec(); }
Also the following warning is printed:
qt.winrtrunner.app: WARNING: QApplication was not created in the main() thread.
In Qt 5.9 and 5.10 event filters work as expected.
| For Gerrit Dashboard: QTBUG-66418 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 220517,5 | WinRT: Do not call canAllocateExecutableMemory from static initializer | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 239354,3 | winrt: Explicitly set main thread in QCoreApplication's constructor | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |
| 303956,3 | winrt: Fix threading issue when initializing webview plugins | 5.15 | qt/qtwebview | Status: MERGED | +2 | 0 |